improve frontend integration
